fix: project header spacing

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -31,6 +31,10 @@
     margin: 0 0 36px;
 }
 
+#header-text{
+    margin-bottom: 0px;
+}
+
 .projects-list {
     display: flex;
     flex-direction: column;
